--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -32,8 +32,45 @@
     </div>
 
     <!-- Right elements -->
-    <ng-container *ngIf="isLogin; else nonLoginTemplate">
-      <ng-container [ngTemplateOutlet]="loggedTemplate"></ng-container>
+    <ng-container *ngIf="appState.me; else nonLoginTemplate">
+      <div class="relative flex items-center">
+        <!-- Notification -->
+        <div class="relative">
+          <a class="hidden-arrow mr-4 flex items-center text-neutral-600 transition duration-200 hover:text-neutral-700 hover:ease-in-out focus:text-neutral-700 disabled:text-black/30 motion-reduce:transition-none dark:text-neutral-200 dark:hover:text-neutral-300 dark:focus:text-neutral-300 [&.active]:text-black/90 dark:[&.active]:text-neutral-400"
+            role="button" aria-expanded="false">
+            <mat-icon class="[&>svg]:w-5" svgIcon="ic_notification"></mat-icon>
+            <span
+              class="absolute -mt-4 ml-2.5 rounded-full bg-danger px-[0.35em] py-[0.15em] text-[0.6rem] font-bold leading-none text-white">1</span>
+          </a>
+        </div>
+    
+        <!-- User Avatar -->
+        <div class="relative" data-te-dropdown-ref>
+          <a class="hidden-arrow flex items-center whitespace-nowrap transition duration-150 ease-in-out motion-reduce:transition-none"
+            id="user-avatar" role="button" data-te-dropdown-toggle-ref aria-expanded="false">
+            <img src="https://tecdn.b-cdn.net/img/new/avatars/2.jpg" class="rounded-full" style="height: 25px; width: 25px"
+              alt="" loading="lazy" />
+            <mat-icon class="w-2" svgIcon="ic_arrow-down"></mat-icon>
+          </a>
+    
+          <ul
+            class="absolute w-44 left-auto right-0 z-[1000] float-left m-0 mt-1 hidden min-w-max list-none overflow-hidden rounded-lg border-none bg-white bg-clip-padding text-left text-base shadow-lg dark:bg-neutral-700 [&[data-te-dropdown-show]]:block"
+            aria-labelledby="user-avatar" data-te-dropdown-menu-ref>
+            <li data-te-ripple-init data-te-ripple-color="primary">
+              <a class="block w-full whitespace-nowrap bg-transparent px-4 py-2 text-sm font-normal text-neutral-700 hover:bg-neutral-100 active:text-neutral-800 active:no-underline disabled:pointer-events-none disabled:bg-transparent disabled:text-neutral-400 dark:text-neutral-200 dark:hover:bg-white/30"
+                data-te-dropdown-item-ref>Thông tin</a>
+            </li>
+            <li data-te-ripple-init data-te-ripple-color="primary">
+              <a class="block w-full whitespace-nowrap bg-transparent px-4 py-2 text-sm font-normal text-neutral-700 hover:bg-neutral-100 active:text-neutral-800 active:no-underline disabled:pointer-events-none disabled:bg-transparent disabled:text-neutral-400 dark:text-neutral-200 dark:hover:bg-white/30"
+                data-te-dropdown-item-ref>Cài đặt</a>
+            </li>
+            <li data-te-ripple-init data-te-ripple-color="primary">
+              <a class="block w-full whitespace-nowrap bg-transparent px-4 py-2 text-sm font-normal text-neutral-700 hover:bg-neutral-100 active:text-neutral-800 active:no-underline disabled:pointer-events-none disabled:bg-transparent disabled:text-neutral-400 dark:text-neutral-200 dark:hover:bg-white/30"
+                data-te-dropdown-item-ref>Đăng xuất</a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </ng-container>
 
   </div>
@@ -41,44 +78,7 @@
 
 <!-- Logged template -->
 <ng-template #loggedTemplate>
-  <div class="relative flex items-center">
-    <!-- Notification -->
-    <div class="relative">
-      <a class="hidden-arrow mr-4 flex items-center text-neutral-600 transition duration-200 hover:text-neutral-700 hover:ease-in-out focus:text-neutral-700 disabled:text-black/30 motion-reduce:transition-none dark:text-neutral-200 dark:hover:text-neutral-300 dark:focus:text-neutral-300 [&.active]:text-black/90 dark:[&.active]:text-neutral-400"
-        role="button" aria-expanded="false">
-        <mat-icon class="[&>svg]:w-5" svgIcon="ic_notification"></mat-icon>
-        <span
-          class="absolute -mt-4 ml-2.5 rounded-full bg-danger px-[0.35em] py-[0.15em] text-[0.6rem] font-bold leading-none text-white">1</span>
-      </a>
-    </div>
 
-    <!-- User Avatar -->
-    <div class="relative" data-te-dropdown-ref>
-      <a class="hidden-arrow flex items-center whitespace-nowrap transition duration-150 ease-in-out motion-reduce:transition-none"
-        id="user-avatar" role="button" data-te-dropdown-toggle-ref aria-expanded="false">
-        <img src="https://tecdn.b-cdn.net/img/new/avatars/2.jpg" class="rounded-full" style="height: 25px; width: 25px"
-          alt="" loading="lazy" />
-        <mat-icon class="w-2" svgIcon="ic_arrow-down"></mat-icon>
-      </a>
-
-      <ul
-        class="absolute w-44 left-auto right-0 z-[1000] float-left m-0 mt-1 hidden min-w-max list-none overflow-hidden rounded-lg border-none bg-white bg-clip-padding text-left text-base shadow-lg dark:bg-neutral-700 [&[data-te-dropdown-show]]:block"
-        aria-labelledby="user-avatar" data-te-dropdown-menu-ref>
-        <li data-te-ripple-init data-te-ripple-color="primary">
-          <a class="block w-full whitespace-nowrap bg-transparent px-4 py-2 text-sm font-normal text-neutral-700 hover:bg-neutral-100 active:text-neutral-800 active:no-underline disabled:pointer-events-none disabled:bg-transparent disabled:text-neutral-400 dark:text-neutral-200 dark:hover:bg-white/30"
-            data-te-dropdown-item-ref>Thông tin</a>
-        </li>
-        <li data-te-ripple-init data-te-ripple-color="primary">
-          <a class="block w-full whitespace-nowrap bg-transparent px-4 py-2 text-sm font-normal text-neutral-700 hover:bg-neutral-100 active:text-neutral-800 active:no-underline disabled:pointer-events-none disabled:bg-transparent disabled:text-neutral-400 dark:text-neutral-200 dark:hover:bg-white/30"
-            data-te-dropdown-item-ref>Cài đặt</a>
-        </li>
-        <li data-te-ripple-init data-te-ripple-color="primary">
-          <a class="block w-full whitespace-nowrap bg-transparent px-4 py-2 text-sm font-normal text-neutral-700 hover:bg-neutral-100 active:text-neutral-800 active:no-underline disabled:pointer-events-none disabled:bg-transparent disabled:text-neutral-400 dark:text-neutral-200 dark:hover:bg-white/30"
-            data-te-dropdown-item-ref>Đăng xuất</a>
-        </li>
-      </ul>
-    </div>
-  </div>
 </ng-template>
 
 <!-- Signin Button Template -->
