--- a/src/app/main/signin/signin.component.html
+++ b/src/app/main/signin/signin.component.html
@@ -9,13 +9,13 @@
 
             <!-- Right column container with form -->
             <div class="md:w-8/12 lg:ml-6 lg:w-5/12">
-                <form>
+                <form [formGroup]="formGroup">
                     <!-- Email input -->
                     <div class="relative mb-6" data-te-input-wrapper-init>
-                        <input type="text"
+                        <input type="text" formControlName="email"
                             class="peer block min-h-[auto] w-full rounded border-0 bg-transparent px-3 py-[0.32rem] leading-[2.15] outline-none transition-all duration-200 ease-linear focus:placeholder:opacity-100 data-[te-input-state-active]:placeholder:opacity-100 motion-reduce:transition-none dark:text-neutral-200 dark:placeholder:text-neutral-200 [&:not([data-te-input-placeholder-active])]:placeholder:opacity-0"
-                            id="exampleFormControlInput3" placeholder="Email address" />
-                        <label for="exampleFormControlInput3"
+                            id="formControlEmail" placeholder="Email address" />
+                        <label for="formControlEmail"
                             class="pointer-events-none absolute left-3 top-0 mb-0 max-w-[90%] origin-[0_0] truncate pt-[0.37rem] leading-[2.15] text-neutral-500 transition-all duration-200 ease-out peer-focus:-translate-y-[1.15rem] peer-focus:scale-[0.8] peer-focus:text-primary peer-data-[te-input-state-active]:-translate-y-[1.15rem] peer-data-[te-input-state-active]:scale-[0.8] motion-reduce:transition-none dark:text-neutral-200 dark:peer-focus:text-primary">Email
                             address
                         </label>
@@ -23,10 +23,10 @@
 
                     <!-- Password input -->
                     <div class="relative mb-6" data-te-input-wrapper-init>
-                        <input type="password"
+                        <input type="password" formControlName="password"
                             class="peer block min-h-[auto] w-full rounded border-0 bg-transparent px-3 py-[0.32rem] leading-[2.15] outline-none transition-all duration-200 ease-linear focus:placeholder:opacity-100 data-[te-input-state-active]:placeholder:opacity-100 motion-reduce:transition-none dark:text-neutral-200 dark:placeholder:text-neutral-200 [&:not([data-te-input-placeholder-active])]:placeholder:opacity-0"
-                            id="exampleFormControlInput33" placeholder="Password" />
-                        <label for="exampleFormControlInput33"
+                            id="formControlPassword" placeholder="Password" />
+                        <label for="formControlPassword"
                             class="pointer-events-none absolute left-3 top-0 mb-0 max-w-[90%] origin-[0_0] truncate pt-[0.37rem] leading-[2.15] text-neutral-500 transition-all duration-200 ease-out peer-focus:-translate-y-[1.15rem] peer-focus:scale-[0.8] peer-focus:text-primary peer-data-[te-input-state-active]:-translate-y-[1.15rem] peer-data-[te-input-state-active]:scale-[0.8] motion-reduce:transition-none dark:text-neutral-200 dark:peer-focus:text-primary">Password
                         </label>
                     </div>
@@ -49,7 +49,7 @@
                     </div>
 
                     <!-- Submit button -->
-                    <button type="button"
+                    <button type="button" (click)="signin()"
                         class="inline-block w-full rounded bg-primary px-7 pb-2.5 pt-3 text-sm font-medium uppercase leading-normal text-white shadow-[0_4px_9px_-4px_#3b71ca] transition duration-150 ease-in-out hover:bg-primary-600 hover:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.3),0_4px_18px_0_rgba(59,113,202,0.2)] focus:bg-primary-600 focus:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.3),0_4px_18px_0_rgba(59,113,202,0.2)] focus:outline-none focus:ring-0 active:bg-primary-700 active:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.3),0_4px_18px_0_rgba(59,113,202,0.2)] dark:shadow-[0_4px_9px_-4px_rgba(59,113,202,0.5)] dark:hover:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.2),0_4px_18px_0_rgba(59,113,202,0.1)] dark:focus:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.2),0_4px_18px_0_rgba(59,113,202,0.1)] dark:active:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.2),0_4px_18px_0_rgba(59,113,202,0.1)]"
                         data-te-ripple-init data-te-ripple-color="light">
                         Sign in
@@ -71,7 +71,7 @@
                         <mat-icon class="mr-1" svgIcon="ic_facebook"></mat-icon>
                         <span>Đăng nhập bằng Facebook</span>
                     </a>
-                    <a class="mb-3 shadow-md  border-1 border-neutral-800 flex w-full bg-white items-center justify-center rounded px-7 pb-2.5 pt-3 text-center text-sm font-medium uppercase leading-normal transition duration-150 ease-in-out"
+                    <a (click)="signinWithGoogle()" class="mb-3 shadow-md  border-1 border-neutral-800 flex w-full bg-white items-center justify-center rounded px-7 pb-2.5 pt-3 text-center text-sm font-medium uppercase leading-normal transition duration-150 ease-in-out"
                         role="button" data-te-ripple-init>
                         <!-- Twitter -->
                         <mat-icon class="mr-1" svgIcon="ic_google-color"></mat-icon>
