--- a/src/app/main/signin/signin.component.html
+++ b/src/app/main/signin/signin.component.html
@@ -1,14 +1,14 @@
-<section class="h-screen w-9/12 m-auto">
-    <div class="container h-full px-6 py-24">
-        <div class="g-6 flex h-full flex-wrap items-center justify-center lg:justify-between">
+<section class="h-screen">
+    <div class="container h-full px-2 py-24 m-auto">
+        <div class="w-full g-6 flex h-full flex-wrap items-center justify-center lg:justify-between">
             <!-- Left column container with background-->
-            <div class="mb-12 md:mb-0 md:w-8/12 lg:w-6/12">
+            <div class="mb-12 md:mb-0 md:w-6/12">
                 <img src="https://tecdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/draw2.svg"
                     class="w-full" alt="Phone image" loading="lazy" />
             </div>
 
             <!-- Right column container with form -->
-            <div class="md:w-8/12 lg:ml-6 lg:w-5/12">
+            <div class="mobile:w-full sm:w-9/12 md:w-4/12 md:m-auto" >
                 <form [formGroup]="formGroup">
                     <!-- Email input -->
                     <div class="relative mb-6" data-te-input-wrapper-init>
@@ -71,7 +71,8 @@
                         <mat-icon class="mr-1" svgIcon="ic_facebook"></mat-icon>
                         <span>Đăng nhập bằng Facebook</span>
                     </a>
-                    <a (click)="signinWithGoogle()" class="mb-3 shadow-md  border-1 border-neutral-800 flex w-full bg-white items-center justify-center rounded px-7 pb-2.5 pt-3 text-center text-sm font-medium uppercase leading-normal transition duration-150 ease-in-out"
+                    <a (click)="signinWithGoogle()"
+                        class="mb-3 shadow-md  border-1 border-neutral-800 flex w-full bg-white items-center justify-center rounded px-7 pb-2.5 pt-3 text-center text-sm font-medium uppercase leading-normal transition duration-150 ease-in-out"
                         role="button" data-te-ripple-init>
                         <!-- Twitter -->
                         <mat-icon class="mr-1" svgIcon="ic_google-color"></mat-icon>
