--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,10 +2,14 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+@import 'styles/material/index.scss';
+@import 'styles/tailwind/index.scss';
 
-html {
+
+* {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial,
         'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol',
-        'Noto Color Emoji';
-    scroll-behavior: smooth;
+        'Noto Color Emoji' !important;
+    scroll-behavior: smooth !important;
 }
+
