Update register form and restructure code signin module

--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -13,23 +13,22 @@
     </button>
 
     <!-- Collapsible navigation container -->
-    <div class="!visible hidden flex-grow basis-[100%] items-center lg:!flex lg:basis-auto" id="navbarSupportedContent1"
-      data-te-collapse-item>
-      <!-- Logo -->
-      <a
-        class="mb-4 ml-2 mr-5 mt-3 flex items-center text-neutral-900 hover:text-neutral-900 focus:text-neutral-900 dark:text-neutral-200 dark:hover:text-neutral-400 dark:focus:text-neutral-400 lg:mb-0 lg:mt-0">
-        <img src="https://tecdn.b-cdn.net/img/logo/te-transparent-noshadows.webp" style="height: 15px"
-          alt="ShareStory Logo" loading="lazy" />
-      </a>
-      <!-- Left navigation links -->
-      <ul class="list-style-none mr-auto flex flex-col pl-0 lg:flex-row" data-te-navbar-nav-ref>
-        <li class="mb-4 lg:mb-0 lg:pr-2" data-te-nav-item-ref>
-          <!-- Dashboard link -->
-          <a class="text-neutral-500 transition duration-200 hover:text-neutral-700 hover:ease-in-out focus:text-neutral-700 disabled:text-black/30 motion-reduce:transition-none dark:text-neutral-200 dark:hover:text-neutral-300 dark:focus:text-neutral-300 lg:px-2 [&.active]:text-black/90 dark:[&.active]:text-zinc-400"
-            data-te-nav-link-ref>Share Story</a>
-        </li>
-      </ul>
+    <div class="flex gap-x-4 items-center">
+      <div class="!visible hidden items-center lg:!flex lg:basis-auto">
+        <!-- Left navigation links -->
+        <ul class="list-style-none mr-auto flex flex-col pl-0 lg:flex-row">
+          <li class="mb-4 lg:mb-0 lg:pr-2">
+            <!-- Dashboard link -->
+            <a class="font-bold text-primary text-lg dark:text-neutral-200"
+              data-te-nav-link-ref (click)="backHome()">SCommunity</a>
+          </li>
+
+        </ul>
+      </div>
+
+      <tmp-input-search class="w-72" (onEnter)="onEnter($event)"></tmp-input-search>
     </div>
+
 
     <!-- Right elements -->
     <ng-container *ngIf="appState.me; else noneLogginTemplate">
@@ -38,7 +37,7 @@
 
     <ng-template #noneLogginTemplate>
       <div class="relative flex items-center">
-        <button (click)="signin()" type="button" data-te-ripple-init
+        <button (click)="signup()" type="button" data-te-ripple-init
           class="mr-3 inline-block rounded-full bg-primary-100 px-6 pb-2 pt-2.5 text-xs font-medium uppercase leading-normal text-primary-700 transition duration-150 ease-in-out hover:bg-primary-accent-100 focus:bg-primary-accent-100 focus:outline-none focus:ring-0 active:bg-primary-accent-200">
           Đăng ký
         </button>
