--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,5 +1,11 @@
-<tmp-header></tmp-header>
-<tmp-side-nav></tmp-side-nav>
-<main id="main-content" class="flex !pl-[77px] px-8 py-8">
-    <router-outlet></router-outlet>
-</main>
+<ng-container *ngIf="appState.ready; else loading">
+    <tmp-header></tmp-header>
+    <tmp-side-nav></tmp-side-nav>
+    <main id="main-content" class="flex !pl-[77px] px-8 py-8">
+        <router-outlet></router-outlet>
+    </main>
+</ng-container>
+
+<ng-template #loading>
+    <tmp-loader></tmp-loader>
+</ng-template>
