--- a/src/app/layout/header/components/user-avatar/user-avatar.component.html
+++ b/src/app/layout/header/components/user-avatar/user-avatar.component.html
@@ -1,9 +1,9 @@
 <div class="relative flex items-center">
   <!-- Notification -->
   <div class="relative">
-    <a class="hidden-arrow mr-4 flex items-center text-neutral-600 transition duration-200 hover:text-neutral-700 hover:ease-in-out focus:text-neutral-700 disabled:text-black/30 motion-reduce:transition-none dark:text-neutral-200 dark:hover:text-neutral-300 dark:focus:text-neutral-300 [&.active]:text-black/90 dark:[&.active]:text-neutral-400"
+    <a class="hidden-arrow mr-4 mobile:mr-1 mobile:ml-1 flex items-center text-neutral-600 transition duration-200 hover:text-neutral-700 hover:ease-in-out focus:text-neutral-700 disabled:text-black/30 motion-reduce:transition-none dark:text-neutral-200 dark:hover:text-neutral-300 dark:focus:text-neutral-300 [&.active]:text-black/90 dark:[&.active]:text-neutral-400"
       role="button" aria-expanded="false">
-      <mat-icon class="[&>svg]:w-5" svgIcon="ic_notification"></mat-icon>
+      <mat-icon style="display: flex !important;" class="[&>svg]:w-5 items-center" svgIcon="ic_notification"></mat-icon>
       <span
         class="absolute -mt-4 ml-2.5 rounded-full bg-danger px-[0.35em] py-[0.15em] text-[0.6rem] font-bold leading-none text-white">1</span>
     </a>
@@ -12,9 +12,14 @@
   <!-- User Avatar -->
   <div class="relative flex items-center" [matMenuTriggerFor]="menu">
     <a class="hidden-arrow flex items-center" role="button">
-      <img src="{{user?.picture}}" class="rounded-full w-7 h-7" alt="Avatar" loading="lazy" />
+      <img *ngIf="user?.picture; else defaultAvatarTemplate" src="{{user?.picture}}" class="rounded-full w-7 h-7" alt="Avatar" loading="lazy" />
       <mat-icon class="flex items-center text-neutral-700" svgIcon="ic_arrow-down"></mat-icon>
     </a>
+    
+
+    <ng-template #defaultAvatarTemplate>
+      <mat-icon svgIcon="ic_default_avatar" class="w-6 h-6"></mat-icon>
+    </ng-template>
 
     <mat-menu class="user-menu " #menu="matMenu" [xPosition]="'before'">
       <div matRipple [matRippleDisabled]="true" class="text-sm w-full py-3 px-4">
