--- a/src/app/main/signin/components/login/login.component.html
+++ b/src/app/main/signin/components/login/login.component.html
@@ -38,7 +38,7 @@
     </div>
 
     <!-- Submit button -->
-    <button type="button" (click)="signin()"
+    <button type="button" (click)="submitSignIn.emit()"
         class="inline-block w-full rounded bg-primary px-7 pb-2.5 pt-3 text-sm font-medium uppercase leading-normal text-white shadow-[0_4px_9px_-4px_#3b71ca] transition duration-150 ease-in-out hover:bg-primary-600 hover:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.3),0_4px_18px_0_rgba(59,113,202,0.2)] focus:bg-primary-600 focus:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.3),0_4px_18px_0_rgba(59,113,202,0.2)] focus:outline-none focus:ring-0 active:bg-primary-700 active:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.3),0_4px_18px_0_rgba(59,113,202,0.2)] dark:shadow-[0_4px_9px_-4px_rgba(59,113,202,0.5)] dark:hover:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.2),0_4px_18px_0_rgba(59,113,202,0.1)] dark:focus:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.2),0_4px_18px_0_rgba(59,113,202,0.1)] dark:active:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.2),0_4px_18px_0_rgba(59,113,202,0.1)]"
         data-te-ripple-init data-te-ripple-color="light">
         Sign in
@@ -60,11 +60,19 @@
         <mat-icon class="mr-1" svgIcon="ic_facebook"></mat-icon>
         <span>Đăng nhập bằng Facebook</span>
     </a>
-    <a (click)="signinWithGoogle()"
+    <a (click)="requestGoogleOAuth.emit()"
         class="mb-3 shadow-md  border-1 border-neutral-800 flex w-full bg-white items-center justify-center rounded px-7 pb-2.5 pt-3 text-center text-sm font-medium uppercase leading-normal transition duration-150 ease-in-out"
         role="button" data-te-ripple-init>
         <!-- Twitter -->
         <mat-icon class="mr-1" svgIcon="ic_google-color"></mat-icon>
         <span>Đăng nhập bằng google</span>
     </a>
+
+        <!-- Signin link -->
+        <p class="mb-0 mt-2 pt-1 text-sm font-semibold">
+            Bạn chưa có tài khoản?
+            <a (click)="requestRegister.emit()"
+                class="text-danger transition duration-150 ease-in-out hover:text-danger-600 focus:text-danger-600 active:text-danger-700">Đăng
+                ký</a>
+        </p>
 </form>
