--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,52 +1,7 @@
-<!-- Main navigation container -->
-<nav
-  class="flex-no-wrap relative flex w-full items-center justify-between bg-[#FBFBFB] py-2 shadow-md shadow-black/5 dark:bg-neutral-600 dark:shadow-black/10 lg:flex-wrap lg:justify-start lg:py-4"
-  data-te-navbar-ref>
-  <div class="flex flex-wrap items-center justify-between sm:px-4 xs:px-2 lg:w-11/12 xs:w-full m-auto">
-    <!-- Hamburger button for mobile view -->
-    <button
-      class="block border-0 bg-transparent px-2 text-neutral-500 hover:no-underline hover:shadow-none focus:no-underline focus:shadow-none focus:outline-none focus:ring-0 dark:text-neutral-200 lg:hidden"
-      type="button" data-te-sidenav-toggle-ref data-te-target="#sidenav" aria-controls="#sidenav" aria-expanded="false"
-      aria-label="Toggle navigation">
-      <!-- Hamburger icon -->
-      <mat-icon class="[&>svg]:w-7" svgIcon="ic_hambuger"></mat-icon>
-    </button>
+<ng-container *ngIf="!appState.me; else loggedTemplate">
+  <tmp-header-none-login class="w-full" (requestSignIn)="requestSignIn()" (requestSignUp)="requestSignUp()"></tmp-header-none-login>
+</ng-container>
 
-    <!-- Collapsible navigation container -->
-    <div class="flex gap-x-4 items-center">
-      <div class="!visible hidden items-center lg:!flex lg:basis-auto">
-        <!-- Left navigation links -->
-        <ul class="list-style-none mr-auto flex flex-col pl-0 lg:flex-row">
-          <li class="mb-4 lg:mb-0 lg:pr-2">
-            <!-- Dashboard link -->
-            <a class="font-bold text-primary text-lg dark:text-neutral-200"
-              data-te-nav-link-ref (click)="backHome()">SCommunity</a>
-          </li>
-
-        </ul>
-      </div>
-
-      <tmp-input-search class="w-72" (onEnter)="onEnter($event)"></tmp-input-search>
-    </div>
-
-
-    <!-- Right elements -->
-    <ng-container *ngIf="appState.me; else noneLogginTemplate">
-      <tmp-user-avatar [user]="appState.me" (logout)="logout($event)"></tmp-user-avatar>
-    </ng-container>
-
-    <ng-template #noneLogginTemplate>
-      <div class="relative flex items-center">
-        <button (click)="signup()" type="button" data-te-ripple-init
-          class="mr-3 inline-block rounded-full bg-primary-100 px-6 pb-2 pt-2.5 text-xs font-medium uppercase leading-normal text-primary-700 transition duration-150 ease-in-out hover:bg-primary-accent-100 focus:bg-primary-accent-100 focus:outline-none focus:ring-0 active:bg-primary-accent-200">
-          Đăng ký
-        </button>
-        <button (click)="signin()" type="button" data-te-ripple-init data-te-ripple-color="primary"
-          class="mr-3 inline-block rounded-full bg-primary px-6 pb-2 pt-2.5 text-xs font-medium uppercase leading-normal text-white shadow-[0_4px_9px_-4px_#3b71ca] transition duration-150 ease-in-out hover:bg-primary-600 hover:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.3),0_4px_18px_0_rgba(59,113,202,0.2)] focus:bg-primary-600 focus:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.3),0_4px_18px_0_rgba(59,113,202,0.2)] focus:outline-none focus:ring-0 active:bg-primary-700 active:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.3),0_4px_18px_0_rgba(59,113,202,0.2)] dark:shadow-[0_4px_9px_-4px_rgba(59,113,202,0.5)] dark:hover:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.2),0_4px_18px_0_rgba(59,113,202,0.1)] dark:focus:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.2),0_4px_18px_0_rgba(59,113,202,0.1)] dark:active:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.2),0_4px_18px_0_rgba(59,113,202,0.1)]">
-          Đăng nhập
-        </button>
-      </div>
-    </ng-template>
-
-  </div>
-</nav>
+<ng-template #loggedTemplate>
+  <tmp-header-logged class="w-full" [user]="appState.me" (requestLogout)="requestLogout()"></tmp-header-logged>
+</ng-template>
