--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,7 +1,7 @@
 <ng-container *ngIf="appState.ready; else loading">
     <tmp-header></tmp-header>
-    <tmp-side-nav></tmp-side-nav>
-    <main id="main-content" class="flex !pl-[77px] px-8 py-8">
+    <!-- <tmp-side-nav></tmp-side-nav> -->
+    <main id="main-content" class="m-auto py-8">
         <router-outlet></router-outlet>
     </main>
 </ng-container>
