--- a/src/app/main/home/home.component.html
+++ b/src/app/main/home/home.component.html
@@ -1,1 +1,11 @@
-<p>home works!</p>
+<div class="w-full flex">
+    <div class="w-7/12">
+        <ng-container *ngIf="items$ | async as items">
+            <tmp-card *ngFor="let item of items;" [item]="item"></tmp-card>
+        </ng-container>
+    </div>
+
+    <div class="w-5/12">
+        Right nav bar
+    </div>
+</div>
