--- a/src/app/layout/header/components/input-search/input-search.component.html
+++ b/src/app/layout/header/components/input-search/input-search.component.html
@@ -1,5 +1,8 @@
-<div class="relative flex w-full flex-wrap items-center">
-    <input type="search"
-        class="relative text-sm h-10 w-full m-0 -mr-0.5 block w-[1px] min-w-0 flex-auto rounded-full border border-solid border-neutral-300 bg-transparent bg-clip-padding px-3 py-[0.25rem] text-base font-normal leading-[1.6] text-neutral-700 outline-none transition duration-200 ease-in-out focus:z-[3] focus:border-primary focus:text-neutral-700 focus:shadow-[inset_0_0_0_1px_rgb(59,113,202)] focus:outline-none dark:border-neutral-600 dark:text-neutral-200 dark:placeholder:text-neutral-200 dark:focus:border-primary"
-        placeholder="Tìm kiếm...." aria-label="Search" aria-describedby="button-addon1" (keyup.enter)="enter()" [formControl]="searchControl" />
+<div class="relative w-full">
+    <div class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none">
+        <mat-icon class="text-gray-600" svgIcon="ic_search"></mat-icon>
+    </div>
+    <input [formControl]="searchControl" type="text" id="simple-search" (keyup.enter)="enter()"
+        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full pl-10 p-2.5  dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+        placeholder="Tìm kiếm....">
 </div>
