--- a/src/styles/tailwind/tailwind.scss
+++ b/src/styles/tailwind/tailwind.scss
@@ -1,11 +1,13 @@
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 400px) and (max-width:500px) {
     .container {
         max-width: 100%;
+        width: 100%;
     }
 }
 
 @media screen and (max-width: 320px) {
     .container {
         max-width: 100%;
+        width: 100%;
     }
 }
