--- a/src/app/layout/header/components/header-logged/header-logged.component.html
+++ b/src/app/layout/header/components/header-logged/header-logged.component.html
@@ -1,4 +1,4 @@
-<nav class="bg-white border-gray-200 dark:bg-gray-900 shadow">
+<nav class="bg-white border-gray-200 dark:bg-gray-900 shadow fixed w-full top-0 left-0 right-0">
     <div class="flex flex-wrap items-center justify-between max-w-screen-xl mx-auto p-4">
         <div class="flex gap-x-4">
             <a class="flex items-center" (click)="backHome.emit()">
