--- a/src/app/layout/header/components/header-none-login/header-none-login.component.html
+++ b/src/app/layout/header/components/header-none-login/header-none-login.component.html
@@ -1,4 +1,4 @@
-<nav class="bg-white border-gray-200 dark:bg-gray-900 shadow">
+<nav class="bg-white border-gray-200 dark:bg-gray-900 shadow fixed w-full top-0 left-0 right-0">
     <div class="flex flex-wrap items-center justify-between max-w-screen-xl mx-auto p-4">
         <a (click)="backHome.emit()" class="flex items-center">
             <img src="https://flowbite.com/docs/images/logo.svg" class="h-8 mr-3" alt="SCommunity Logo" />
@@ -7,7 +7,7 @@
         </a>
         <div class="flex items-center md:order-2">
             <a data-te-ripple-init (click)="requestSignIn.emit()"
-                class="text-gray-800 cursor-pointerdark:text-white hover:bg-gray-50 focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-4 py-2 md:px-5 md:py-2.5 mr-1 md:mr-2 dark:hover:bg-gray-700 focus:outline-none dark:focus:ring-gray-800">Đăng
+                class="text-gray-800 cursor-pointer dark:text-white hover:bg-gray-50 focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-4 py-2 md:px-5 md:py-2.5 mr-1 md:mr-2 dark:hover:bg-gray-700 focus:outline-none dark:focus:ring-gray-800">Đăng
                 nhập</a>
             <a data-te-ripple-init data-te-ripple-color="primary" (click)="requestSignUp.emit()"
                 class="text-white bg-blue-700 cursor-pointer  hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 md:px-5 md:py-2.5 mr-1 md:mr-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">Đăng
